# bt-esp

./: AUDIO_IMPROVEMENTS.md  AUDIO_STREAMING.md  audio_server.py  command.txt  monitor_quality.sh  py.sh  requirements.txt  run_enhanced_audio.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_hf_msg_set.c  app_hf_msg_set.h  audio_streaming.c  audio_streaming.h  autostart.c  autostart.h  bt_app_hf.c  bt_app_hf.h  call_simulation.c  call_simulation.h  main.c  wifi_manager.c  wifi_manager.h
