idf_component_register(SRCS "app_hf_msg_set.c"
                            "audio_streaming.c"
                            "autostart.c"
                            "bt_app_core.c"
                            "bt_app_hf.c"
                            "call_simulation.c"
                            "gpio_pcm_config.c"
                            "main.c"
                            "wifi_manager.c"
                    INCLUDE_DIRS ".")
